src/style.css
body{
  padding: 0;
  margin:0;
}
header{
  display:flex;
  align-items: center;
  width: 100%;
  height: 8rem;
  background: black;
  opacity: .9;
  margin-bottom: 1rem; 
}
header .menu{
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 63%;
  height: 30%;
}
header .menu div{
  background:rgb(232, 238, 223);
  padding: 1rem;
  box-sizing: border-box;
  border-radius: 0.2rem;
  cursor:pointer;
} 
header .menu div:hover{
  background: green;
}
header .menu div:hover a{
  color: white;
}
a{
  color: rgb(17, 15, 131);
  text-decoration: none;
  font-weight: 600;
}
.main{
  width: 80%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  row-gap: 2rem;
  margin: auto;
}
.common{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 400px;
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  font-weight: 700;
}
.product {
  display: flex;
  flex-direction: column;
  font-family: Lato;
  width: 200px;
  height: 300px;
  box-shadow: 0 2px 0.3rem 0.1rem rgb(199, 194, 187);
}

.top{
  display: flex;
  justify-content: center;
  align-items: center;
  height: 60%;
  border-bottom: 1px rgb(151, 147, 146) solid;
}
.top span{
  height: 70%;
  width: 70%;
}
img{
  height: 430px;
}
.top img{
  width: 100%;
  height: 100%;
}
.bottom{
  height: 40%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  font-family: Arial, Helvetica, sans-serif;
  color: rgb(106, 91, 161)/*#747373*/;
}

.bottom span{
  text-decoration: underline;
  font-weight: 900;
}
.bottom button{
  width: 7rem;
  font-size: 25px;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  background: rgb(15, 15, 15);
  color:white;
  padding-bottom: 5px;
  border-radius: 0.2rem;
  border:none;
  outline: none;
  cursor:pointer;
}

.bottom button:hover{
  background: rgb(1, 85, 1);
}

footer{
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 5rem;
  background: rgb(54, 53, 53);
  color: rgb(202, 199, 199);
  margin-top: 1rem;
}
.copyright{
  font-weight: 900;
}

